emboss (6.0.1-9) UNRELEASED; urgency=low

  * New upstream patch (patch-1-7):
    - Corrections on syntax using the master qualifier name as a suffix.
    - Better support of the --without-x (not used in this package).
    - Bug corrected for needle and water using the -nobrief option.

 -- Charles Plessy <plessy@debian.org>  Wed, 08 Apr 2009 14:42:58 +0900

emboss (6.0.1-8) unstable; urgency=low

  * debian/rules:
     - Do not pass java options to the configure script if openjdk is not
       installed (Closes: #521996, thanks to Peter Green).
     - Recursive removal of emboss_tmp (to build the package twice in a row).
     - Removed one `dh binary-indep` instance that strangely sneaked in after
       running `svn update`.
  * debian/control:
    - Moved again openjdk-6-jdk to Build-Depends-Indep.
    - Added debhelper's ${misc:Depends} substitution variable to the packages
      that did not already depend on it.

 -- Charles Plessy <plessy@debian.org>  Tue, 31 Mar 2009 14:26:55 +0900

emboss (6.0.1-7) unstable; urgency=low

  * debian/control: moved openjdk-6-jdk to Build-Depends.
    Apologies to buildd administrators. (Closes: #521912).

 -- Charles Plessy <plessy@debian.org>  Tue, 31 Mar 2009 08:34:59 +0900

emboss (6.0.1-6) unstable; urgency=low

  * debian/rules:
    - Build arch all packages only when binary-indep is called
      (Closes: #521398)
    - Corrected stamping gymnastics.
  * debian/control: moved openjdk-6-jdk to Build-Depends-Indep 

 -- Charles Plessy <plessy@debian.org>  Mon, 30 Mar 2009 13:02:11 +0900

emboss (6.0.1-5) unstable; urgency=low

  * New upstream patch (patch-1-6): correction for large pairwise alignments.
  * debian/control:
    - Incremented Standards-Version to reflect conformance with Policy 3.8.1
      (no changes needed).
    - Moved the bibliographic reference from the description of the EMBOSS
      package to the file debian/reference.

 -- Charles Plessy <plessy@debian.org>  Wed, 25 Mar 2009 11:44:30 +0900
